[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aragora-debate"
version = "2.8.0"
description = "Standalone adversarial debate package for offline and mock-agent deliberation"
readme = {text = "# Aragora Debate\n\nA standalone Python package for running bounded multi-agent debates with mock or real agents. The published default surface is intentionally small: `Environment`, `DebateProtocol`, and `Arena`.", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Agora Contributors"}]
keywords = ["ai", "multi-agent", "debate", "deliberation", "consensus", "reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = [
    "build>=1.2,<2.0",
    "pytest>=7.0,<10.0",
    "pytest-asyncio>=0.21,<2.0",
    "twine>=5.1,<7.0",
]

[project.urls]
Homepage = "https://aragora.ai"
Repository = "https://github.com/an0mium/aragora"
Issues = "https://github.com/an0mium/aragora/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aragora", "aragora.core", "aragora.debate"]

[tool.setuptools.package-data]
"aragora" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["E", "F", "W", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
